--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <body>
+       </body>
     <title>Document</title>
 </head>
 <body>
+
+
+    <script src=”script.js”></script>
+
     <h1> поскольку Opal — один из самых знаковых автомобилей 80-90-х годов.</h1>
 
 
@@ -19,7 +25,11 @@
        </h2>
 
 
-       <img src="opala.jpg" id="sim" width="1050" height="800">
+       <div class="container">
+        <img src="opala.jpg" id="sim" width="1050" height="900">
+
+
+    </div>
 
 
 
@@ -36,6 +46,32 @@
             выполненного в имперской системе. Принятие двух элементов в проекте вынудило General Motors сохранить две сборочные линии для Opala,
              и эта проблема была решена только в 1979 году с унификацией метрической системы.</h3>
     
+             <nav class=”container d-flex justify-content-between align-items-center”>
+                    <ul class=”nav mt-5”>
+                <li class=”nav-item”><a class=”nav-link”
+                href=”#inicio”>Início</a></li>
+                <li class=”nav-item”><a class=”nav-link”
+                href=”#galeria”>Galeria</a></li>
+                <li class=”nav-item”><a class=”nav-link”
+                href=”#contato”>Contato</a></li>
+                </ul>
+                <div id=”acessibilidade” class=”menu-acessibilidade”>
+                <div id=”opcoes-acessibilidade”>
+                <button id=”aumentar-fonte” class=”btn btn-primary
+                fw-bold”>A+</button>
+                <button id=”diminuir-fonte” class=”btn btn-primary
+                fw-bold”>A-</button>
+                </div>
+                </div>
+                </nav>
+
+
+
+
+
+
+
+
 
 </body>
 </html>
