--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
 
+    <h1 class = "cor-padrão"> Esse texto está na cor padrão <h1> 
 
     <button onclick="changeFontSize('aumentar')">Aumentar</button>
 <button onclick="changeFontSize('reduzir')">Reduzir</button><script>
